# TmCryst

./: .gitignore  CMakeLists.txt  README.md  TmCryst.cpp  TmCryst_draw_scoring.cpp  fon.txt  make commands  run.mac  run_source_0.mac  run_source_2.mac  run_source_5.mac  run_source_7.mac  run_source_8.mac  sim.sh  simgen.sh  submitter.sh  vis.mac
OldScoring/: TmCrystScoring_source_0.root  TmCrystScoring_source_1.root  TmCrystScoring_source_2.root  TmCrystScoring_source_3.root  TmCrystScoring_source_4.root  TmCrystScoring_source_5.root  TmCrystScoring_source_6.root  TmCrystScoring_source_7.root  TmCrystScoring_source_8.root  TmCrystScoring_source_9.root
include/: TmCrystActionInitialization.hh  TmCrystDetectorConstruction.hh  TmCrystEnergyDeposit.hh  TmCrystPrimaryGeneratorAction.hh  TmCrystRun.hh  TmCrystRunAction.hh
macros/: run_source_0.mac  run_source_1.mac  run_source_2.mac  run_source_3.mac  run_source_6.mac  run_source_7.mac  run_source_8.mac  specsource_0.mac  specsource_1.mac  specsource_2.mac  specsource_3.mac  specsource_4.mac  specsource_5.mac  specsource_6.mac  specsource_7.mac  specsource_8.mac  specsource_9.mac
src/: TmCrystActionInitialization.cpp  TmCrystDetectorConstruction.cpp  TmCrystEnergyDeposit.cpp  TmCrystPrimaryGeneratorAction.cpp  TmCrystRun.cpp  TmCrystRunAction.cpp
